[package]
name = "bsky-ingester-app"
edition = "2021"

[[bin]]
name = "bsky_ingester_app"
path = "src/main.rs"

[dependencies]
config = "0.15.8"
log = "0.4.25"
env_logger = "0.11.6"
async-ringbuf = "0.3.3"
anyhow = "1.0.95"
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
jetstream-oxide = "0.1.1"
atrium-api = "0.24.10"
async-nats = "0.38.0"

# stop-words = "0.8.1"
# keyword_extraction = { version = "1.5.0", features = ["yake", "tf_idf"] }
