[package]
name = "bsky-observer-app"
edition = "2021"

[[bin]]
name = "bsky_observer_app"
path = "src/main.rs"

[dependencies]
config = "0.15.8"
log = "0.4.25"
env_logger = "0.11.6"
async-ringbuf = "0.3.3"
anyhow = "1.0.95"
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
async-nats = "0.38.0"
redis = { version = "0.29.0", features = ["tokio-comp"] }
